# cmake

practice2/lib/multdivide/: multdivide.cpp
practice2/lib/multdivide/include/: multdivide.h
task1/: CMakeLists.txt
task1/src/: main.cpp
task1_helloworld/: CMakeLists.txt
task2/: CMakeLists.txt  main.cpp
task2/lib/addsub/: CMakeLists.txt  addsub.cpp
task2/lib/multdivide/: CMakeLists.txt
task2_static_library/: CMakeLists.txt
task2_static_library/lib/addsub/: CMakeLists.txt
